--- a/css/style.css
+++ b/css/style.css
@@ -7,11 +7,13 @@ h1{
 }
 
 .my_brand-header{
-    height: 25px;
     background-color: black;
 }
 .my_brand-header img{
-    height: 90%;
-    vertical-align: top;
-    padding: 5px 5px;
+    height: 25px;
+    padding: 7px 10px;
+}
+
+#navbar .nav-link{
+    color: black;
 }
