--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,6 @@ font-family: Arial, Helvetica, sans-serif;
 .my_jumbotron{
     color: white;
     padding-bottom: 50px;
-    background: no-repeat center url(../img/jumbo-bg.png);
     background-size: cover ;
 }
 .my_jumbo-logo{
@@ -67,9 +66,10 @@ font-family: Arial, Helvetica, sans-serif;
     color: black;
 }
 
-#main-jumbo.my_jumbotron{
-    padding-top: 220px;
+#head-jumbo.my_jumbotron{
+    padding-top: 250px;
     margin-bottom: 30px;
+    background: no-repeat center url(../img/jumbo-bg.png);
 }
 
 #carousel{
@@ -87,4 +87,8 @@ font-family: Arial, Helvetica, sans-serif;
     background-size: contain;
 }
 
+#center-jumbo.my_jumbotron{
+    padding-top: 30px;
+    background-image: url(../img/it-takes-two-hero-banner-desktop.jpg);
+}
 
