--- a/css/style.css
+++ b/css/style.css
@@ -105,3 +105,18 @@ font-family: Arial, Helvetica, sans-serif;
     width: 100%;
     border-radius: 20px;
 }
+
+#split-jumbo{
+    margin-top: 70px;
+    background-color: rgb(190, 188, 187);
+}
+
+#split-jumbo .my_jumbo-logo{
+    padding-top:30px ;
+    width: 60%;
+}   
+
+#split-jumbo img{
+    width: 100%;
+    background-size: cover;
+}
