--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,10 @@
 *{
 font-family: Arial, Helvetica, sans-serif;
 }
-
+footer{
+    margin-top: 80px;
+    background-color: royalblue;
+}
 .my_caption-gray{
     color:grey;
     font-weight: bold;
