--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,17 @@ font-family: Arial, Helvetica, sans-serif;
 }
 footer{
     margin-top: 80px;
+    padding: 70px 0;
     background-color: royalblue;
+    color: white;
+}
+footer ul{
+    list-style-type: none;
+}
+
+footer a{
+    color: white;
+    text-decoration: none;
 }
 .my_caption-gray{
     color:grey;
